    <https://github.com/jhy/jsoup/issues/1910>

  * Bugfix: when pretty-printing, the first inline Element or Comment in a block would not be wrap-indented if it were
    preceded by a blank text node.
    <https://github.com/jhy/jsoup/issues/1906>

  * Bugfix: when pretty-printing a <pre> containing block tags, those tags were incorrectly indented.
    <https://github.com/jhy/jsoup/issues/1891>

Release 1.15.4 [18-Feb-2023]
  * Improvement: added the ability to escape CSS selectors (tags, IDs, classes) to match elements that don't follow
    regular CSS syntax. For example, to match by classname <p class="one.two">, use document.select("p.one\\.two");
    <https://github.com/jhy/jsoup/issues/838>

  * Improvement: when pretty-printing, wrap text that follows a <br> tag.
    <https://github.com/jhy/jsoup/issues/1858>

  * Improvement: when pretty-printing, normalize newlines that follow self-closing tags in custom tags.
    <https://github.com/jhy/jsoup/issues/1852>

  * Improvement: when pretty-printing, collapse non-significant whitespace between a block and an inline tag.
    <https://github.com/jhy/jsoup/issues/1802>

  * Improvement: in Element#forEach and Node#forEachNode, use java.util.function.Consumer instead of the previous
    Android compatibility shim org.jsoup.helper.Consumer. Subsequently, the latter has been deprecated.
    <https://github.com/jhy/jsoup/pull/1870>

  * Improvement: added a new method Document#forms(), to conveniently retrieve a List<FormElement> containing the <form>
    elements in a document.

  * Improvement: added a new method Document#expectForm(query), to find the first matching FormElement, or blow up
    trying.
    
  * Bugfix: URLs containing characters such as [ and ] were not escaped correctly, and would throw a
    MalformedURLException when fetched.
    <https://github.com/jhy/jsoup/issues/1873>

  * Bugfix: Element.cssSelector would create invalid selectors for elements where the tag name, ID, or classnames needed